--- a/RideTest.html
+++ b/RideTest.html
@@ -1,24 +1,8 @@
-<!DOCTYPE html>
-<html>
-<head>
-
-  <meta name="viewport" content="width=device-width, initial-scale=0.86">
-  <meta charset="UTF-8">
-  <title>RDR IR TST</title>
-  <link href="https://fonts.googleapis.com/css?family=VT323" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Work+Sans:300" rel="stylesheet">
-  <link rel="stylesheet" type="text/css" href="css/Rider.css" mce_href="css/Rider.css" href="css/Rider.css" mce_href="css/Rider.css" media="all" />
-  <link rel="stylesheet" type="text/css" href="css/print.css" mce_href="css/print.css" href="css/print.css" mce_href="css/print.css" media="print" />
-  </head>
-
-<body class="body">
-
-<img src="https://i.imgur.com/xmsc8YT.png" style="display: block; margin-left: auto; margin-right: auto; width:75%" >
+<p>&nbsp;</p>
+<p>  <img style="display: block; margin-left: auto; margin-right: auto; width: 75%;" src="https://i.imgur.com/xmsc8YT.png" /></p>
 <h1>Injury Reserve Production Advance</h1>
-
 <hr />
-<br>
-
+<p>&nbsp;</p>
 <table id="Header" border="1">
 <tbody>
 <tr>
@@ -39,21 +23,17 @@
 </tr>
 </tbody>
 </table>
-<br>
-
-
-<div id="KeyInfo"><h2>Key Info</h2>
+<p>&nbsp;</p>
+<div id="KeyInfo">
+<h2>Key Info</h2>
 <hr />
-<p>Injury Reserve (IR) consists of 2 Vocalist and a Producer.&nbsp;<br />Will require 2 Wireless Microphones (Does NOT carry)<br />One Wired Mic will run through some processing and be sent back to you (through our own DI)<br />One Wireless Mic will need to be routed through one of our pedals (DSR). It will be processed and sent back.<br />The remaining two inputs are L+R Audio Track & Talk Back to FOH<br />All Lines connect to house as XLR<br />6 Inputs Total<br />Injury Reserve's gear will run off of 110v Power.<br />Traveling Party is 6 total.<br />We are not traveling with an Audio Engineer. The TM will double as LD.</p>
+<p>Injury Reserve (IR) consists of 2 Vocalist and a Producer.&nbsp;<br />Will require 2 Wireless Microphones (Does NOT carry)<br />One Wired Mic will run through some processing and be sent back to you (DSR)<br />One Wireless Mic&nbsp;will need to be routed&nbsp;through one of our interfaces (DSR). It will be processed and sent back.<br />The remaining two inputs are L+R Audio Track &amp; Talk Back to FOH<br />All Lines connect to house as XLR<br />6 Inputs Total<br />Injury Reserve's gear will run off of 110v Power.<br />Traveling Party is 6 total.<br />We are not traveling with an Audio Engineer. The PM will double as LD.</p>
 </div>
-
-<p style="page-break-before: always">
-
-<div id="Gear"><h2><span>Gear + Backline</span></h2>
+<div id="Gear">
+<h2>Gear + Backline</h2>
 <hr />
-<p><span>Purchaser agrees to provide a&nbsp;</span>professional audio system capable of producing 110dbA without distortion, without the engagement of any limiting, and without danger of failure or thermal protection. A professional quality, properly tuned, time-aligned speaker system with even coverage (+/- 3db) throughout the audience areas of the venue or festival.</p>
-<br>
-
+<p>Purchaser agrees to provide a&nbsp;professional audio system capable of producing 110dbA without distortion, without the engagement of any limiting, and without danger of failure or thermal protection. A professional quality, properly tuned, time-aligned speaker system with even coverage (+/- 3db) throughout the audience areas of the venue or festival.</p>
+<br />
 <table id="backline" border="1">
 <tbody>
 <tr style="height: 21px;">
@@ -66,39 +46,37 @@
 <p style="text-align: center;"><sub>(Shure UHF-R at Minimum, not ULX, no PRG or PGX)</sub><br /><span style="text-decoration: underline;">Must to be&nbsp;approved&nbsp;by TM PRIOR to DOS.</span></p>
 </td>
 <td style="width: 50%; text-align: center;">
-<p></p>
-<p></p>
-<p>Injury Reserve carries the following:</p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
 </td>
 </tr>
 <tr style="height: 14px;">
 <td style="width: 50%; height: 21px; text-align: center;">2 Wired Shure SM58 Microphones</td>
-<td style="width: 50%; height: 21px; text-align: center;">Laptops, Interfaces, DI Boxes, and Controllers</td>
+<td style="width: 50%; height: 21px; text-align: center;">2 Stereo DIs</td>
 </tr>
 <tr style="height: 21px;">
 <td style="width: 50%; height: 21px; text-align: center;">2 Straight Mic Stands</td>
-<td style="width: 50%; height: 21px; text-align: center;">Laptop Stands</td>
+<td style="width: 50%; height: 21px; text-align: center;">1 Mono DI</td>
 </tr>
 <tr style="height: 21px;">
 <td style="width: 50%; height: 21px; text-align: center;">2 Boom Vocal Mic Stands</td>
-<td style="width: 50%; height: 21px;"></td>
+<td style="width: 50%; height: 21px;">&nbsp;</td>
 </tr>
 <tr style="height: 21px;">
 <td style="width: 50%; height: 21px; text-align: center;">5 Monitor Wedges</td>
-<td style="width: 50%; height: 21px; text-align: center;"><strong>Does not carry Power Adapters or Cable Package</strong></td>
+<td style="width: 50%; height: 21px; text-align: center;"><strong>Does not carry Power Converters.</strong></td>
 </tr>
 </tbody>
 </table>
-<p></p>
-<p></p>
-<br>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<br />
 <p>All Carried Gear runs on 110v Power.&nbsp;<br />Need the local equivalent of 2x 15+ Amp circuits w/ US Type B 3 Pin Outlets<br />One USC for Producer (4 Outlets)<br />One DSR for Vocal Processing (4 Outlets)</p>
-<p></p>
+<p>&nbsp;</p>
 </div>
-
-<p style="page-break-before: always">
-
-<div id="Inputs"><h2>Inputs + Mixes</h2>
+<div id="Inputs">
+<h2>Inputs + Mixes</h2>
 <hr />
 <table id="inputlist" border="1">
 <tbody>
@@ -107,50 +85,52 @@
 <td style="width: 50%; text-align: center;"><strong><span style="text-decoration: underline;">Monitor Mixes</span></strong></td>
 </tr>
 <tr>
-<td style="width: 50%; text-align: left; padding-left: 60px;"><br>1. Track L<br />2. Track R<br />3. Nate Vocal* <br />4. Groggs Vocal (Dry)<br />5. Effects Vocal 1*  <br />6 Talkback to FOH <p style="font-size: 75%;">* =Processed Onstage</p></td>
+<td style="width: 50%; text-align: left; padding-left: 60px;"><br />1. Track L<br />2. Track R<br />3. Nate Vocal* <br />4. Groggs Vocal (Dry)<br />5. Effects Vocal 1* <br />6 Talkback to FOH
+<p style="font-size: 75%;">* =Processed Onstage</p>
+</td>
 <td style="width: 50%; text-align: left;">
 <p style="padding-left: 60px;">1. Producer Wedge<br />2. DSR-DSC Wedges 1-3<br />3. DSL Wedge</p>
 </td>
 </tr>
 </tbody>
 </table>
-<p></p>
+<p>&nbsp;</p>
 <p>Inputs 1-4 will got into all Monitor Mixes.<br />Input 5 "Effects Vocal 1" will ONLY be in Mix 3<br />This is to prevent feedback due to heavy processing.<br />Monitor Mix 3 will match Mix 2, only with Effects Vocal 1 added.&nbsp;</p>
 </div>
-<div id="StagePlots"><h2>Stage Plot</h2>
-<hr />
-<img src="https://i.imgur.com/FuTKWeM.jpg" class="center" width="95%"><br>
-<a href="https://drive.google.com/file/d/1IpxosYsbInWlJicEJUC5yrEuA0pHldv_/view?usp=sharing"><span style="text-decoration: underline;">Download as .PDF</span></a><br>
-<a href="https://drive.google.com/file/d/10XpYXh0zuQSHFewrvEZ0IIcuo6SJj2Di/view?usp=sharing"><span style="text-decoration: underline;">Download as .JPG</span></a>
-<p></p>
+<div id="StagePlots">
+<h2>Stage Plot</h2>
+<hr /><img class="center" src="https://i.imgur.com/FuTKWeM.jpg" width="95%" /><br /> <a href="https://drive.google.com/file/d/1IpxosYsbInWlJicEJUC5yrEuA0pHldv_/view?usp=sharing"><span style="text-decoration: underline;">Download as .PDF</span></a><br /> <a href="https://drive.google.com/file/d/10XpYXh0zuQSHFewrvEZ0IIcuo6SJj2Di/view?usp=sharing"><span style="text-decoration: underline;">Download as .JPG</span></a>
+<p>&nbsp;</p>
 </div>
-
-<h2></h2>
-
-<p style="page-break-before: always">
-
-<div id="Backstage"><h2>Backstage</h2>
+<h2>&nbsp;</h2>
+<div id="Backstage">
+<h2>Backstage</h2>
 <hr />
-<div id="DressingRooms"><h3><span></span>Dressing Rooms</h3></div>
-<p>Injury Reserve&nbsp;<span>will need (1) dressing room&nbsp;</span>for the sole use of Injury Reserve (NO OPENING ACTS - NO PRESS). No person other than Injiury Reserve and crew shall have access to the dressing room without the prior permission of Artist Manager.<span><br />Please plan to leave the dressing rooms open at least (60) minutes after loadout.</span></p>
-<p><span>Room should be lockable, clean, well-lit, air-conditioned, and in close proximity to the stage. Please make sure hot &amp; cold water is working, hand soap, a full-length mirror, private bathroom, power strips, empty trash cans, a cooler/fridge, and comfortably furnished. </span></p>
-<div id="Office"><h3><span>Production Office</span></h3></div>
+<div id="DressingRooms">
+<h3>Dressing Rooms</h3>
+</div>
+<p>Injury Reserve&nbsp;will need (1) dressing room&nbsp;for the sole use of Injury Reserve (NO OPENING ACTS - NO PRESS). No person other than Injiury Reserve and crew shall have access to the dressing room without the prior permission of Artist Manager. Please plan to leave the dressing rooms open at least (60) minutes after loadout.</p>
+<p>Room should be lockable, clean, well-lit, air-conditioned, and in close proximity to the stage. Please make sure hot &amp; cold water is working, hand soap, a full-length mirror, private bathroom, power strips, empty trash cans, a cooler/fridge, and comfortably furnished.</p>
+<div id="Office">
+<h3>Production Office</h3>
+</div>
 <p>Please provide a clean, well lit, quiet production office (preferably away from the stage) with table, desk chair, working internet, and access to printer.<br />This room should be locked at all times. The keys are to be given to Artist &amp; Tour Manager upon the time of arrival at the venue.</p>
-<div id="Meals"><h3>Meals</h3></div>
+<div id="Meals">
+<h3>Meals</h3>
+</div>
 <p>If you are not providing a catered meal, please have a "menu book" available in the Production Office with lunch and dinner options.<br />Please note there are Vegetarians and Vegans in the touring party and need to have equal options avialable.<br />Buyout to be provided in Cash upon arrival if a hot meal is not available.</p>
 </div>
-
-
-<div id="Hospitality"><h3>Hospitality</h3>
-<br>
-<table id="Hospo" border="1" style="border-collapse: collapse; width: 85%;">
+<div id="Hospitality">
+<h3>Hospitality</h3>
+<br />
+<table id="Hospo" style="border-collapse: collapse; width: 85%;" border="1">
 <tbody>
 <tr>
 <td style="width: 50%;">
 <p style="padding-left: 120px; text-align: left;"><strong><span style="text-decoration: underline;">Food</span></strong><br />Ezekiel Bread<br />Creamy Peanut Butter<br />Grape Jelly<br />White Cheddar Popcorn<br />Regular Cheez‐It&reg;<br />Trail Mix<br />Chocolate Chip Cookie Dough Quest&reg; Bars<br />Harvest Cheddar Sun Chips&reg;</p>
 </td>
 <td style="width: 50%;">
-<p style="padding-left: 30px;"><span style="text-decoration: underline;"></span></p>
+<p style="padding-left: 30px;">&nbsp;</p>
 <p style="padding-left: 30px;"><strong><span style="text-decoration: underline;">Sundries</span></strong><br />12 x Clean, small stage towels - black preferred<br />12 x Clean, large bath towels<br />(NO BAR RAGS!!!)<br />Halls Intense Cooling Lozenges (Silver/Grey bag)<br />Brand Chapstick<br />Recyclable cups, plates, and cutlery<br />Paper Towels, Napkins<br />Beer / Wine Opener<br />Wine Glasses<br />Bluetooth Speaker (not purchased)</p>
 </td>
 </tr>
@@ -164,22 +144,18 @@
 </tr>
 </tbody>
 </table>
-<p></p>
+<p>&nbsp;</p>
 </div>
-</div>
-</div>
-</div>
-
-
-<div id="TravelParty"><h2>Travel&nbsp;Party</h2>
-  <hr />
+<div id="TravelParty">
+<h2>Travel&nbsp;Party</h2>
+<hr />
 <p>All Talent and Crew are 21+</p>
-<table id="travel" border="1" style="border-collapse: collapse; width: 65%;">
+<table id="travel" style="border-collapse: collapse; width: 65%;" border="1">
 <tbody>
 <tr style="height: 21px;">
-<td style="width: 25%; height: 21px; text-align: center;"><span style="text-decoration: underline;"><strong>Name</strong></td>
-<td style="width: 25%; height: 21px; text-align: center;"><span style="text-decoration: underline;"><strong>Role</strong></td>
-<td style="width: 25%; height: 21px; text-align: center;"><span style="text-decoration: underline;"><strong>Dietary Restrictions</strong></td>
+<td style="width: 25%; height: 21px; text-align: center;"><span style="text-decoration: underline;"><strong>Name</strong></span></td>
+<td style="width: 25%; height: 21px; text-align: center;"><span style="text-decoration: underline;"><strong>Role</strong></span></td>
+<td style="width: 25%; height: 21px; text-align: center;"><span style="text-decoration: underline;"><strong>Dietary Restrictions</strong></span></td>
 </tr>
 <tr style="height: 21px;">
 <td style="width: 25%; height: 21px; text-align: center;">Nick Herbert</td>
@@ -188,7 +164,7 @@
 </tr>
 <tr style="height: 21px;">
 <td style="width: 25%; height: 21px; text-align: center;">Will Hasty</td>
-<td style="width: 25%; height: 21px; text-align: center;">Tour Manager&nbsp;</td>
+<td style="width: 25%; height: 21px; text-align: center;">Production Manager&nbsp;</td>
 <td style="width: 25%; height: 21px; text-align: center;">None</td>
 </tr>
 <tr style="height: 21px;">
@@ -213,92 +189,7 @@
 </tr>
 </tbody>
 </table>
-<p></p>
-</div>
-</div>
-</div>
+<p>&nbsp;</p>
 </div>
 <hr />
-
-
-<button onclick="myFunction()">Print Advance</button>
-
-<script>
-function myFunction() {
-    window.print();
-}
-</script><br>
-<script 
-  type="text/JavaScript" 
-  language="JavaScript">
-<!-- 
-//
-// format date as dd-mmm-yy
-// example: 12-Jan-99
-//
-function date_ddmmmyy(date)
-{
-  var d = date.getDate();
-  var m = date.getMonth() + 1;
-  var y = date.getYear();
-
-  // handle different year values 
-  // returned by IE and NS in 
-  // the year 2000.
-  if(y >= 2000)
-  {
-    y -= 2000;
-  }
-  if(y >= 100)
-  {
-    y -= 100;
-  }
-
-  // could use splitString() here 
-  // but the following method is 
-  // more compatible
-  var mmm = 
-    ( 1==m)?'Jan':( 2==m)?'Feb':(3==m)?'Mar':
-    ( 4==m)?'Apr':( 5==m)?'May':(6==m)?'Jun':
-    ( 7==m)?'Jul':( 8==m)?'Aug':(9==m)?'Sep':
-    (10==m)?'Oct':(11==m)?'Nov':'Dec';
-
-  return "" +
-    (d<10?"0"+d:d) + "-" +
-    mmm + "-" +
-    (y<10?"0"+y:y);
-}
-
-
-//
-// get last modified date of the 
-// current document.
-//
-function date_lastmodified()
-{
-  var lmd = document.lastModified;
-  var s   = "Unknown";
-  var d1;
-
-  // check if we have a valid date
-  // before proceeding
-  if(0 != (d1=Date.parse(lmd)))
-  {
-    s = "" + date_ddmmmyy(new Date(d1));
-  }
-
-  return s;
-}
-
-//
-// finally display the last modified date
-// as DD-MMM-YY
-//
-document.write( 
-  "This page was updated on " + 
-  date_lastmodified() );
-
-// -->
-</script>
-  	</body>
-</html>
+<p style="page-break-before: always;"><button>Print Advance</button> </p>
