--- a/RideTest.html
+++ b/RideTest.html
@@ -1,4 +1,18 @@
-<p>&nbsp;</p>
+<!DOCTYPE html>
+<html>
+<head>
+
+  <meta name="viewport" content="width=device-width, initial-scale=0.86">
+  <meta charset="UTF-8">
+  <title>RDR IR TST</title>
+  <link href="https://fonts.googleapis.com/css?family=VT323" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Work+Sans:300" rel="stylesheet">
+  <link rel="stylesheet" type="text/css" href="css/Rider.css" mce_href="css/Rider.css" href="css/Rider.css" mce_href="css/Rider.css" media="all" />
+  <link rel="stylesheet" type="text/css" href="css/print.css" mce_href="css/print.css" href="css/print.css" mce_href="css/print.css" media="print" />
+  </head>
+
+<body class="body">
+
 <p>  <img style="display: block; margin-left: auto; margin-right: auto; width: 75%;" src="https://i.imgur.com/xmsc8YT.png" /></p>
 <h1>Injury Reserve Production Advance</h1>
 <hr />
@@ -193,3 +207,74 @@
 </div>
 <hr />
 <p style="page-break-before: always;"><button>Print Advance</button> </p>
+
+<script>
+function myFunction() {
+    window.print();
+}
+</script><br>
+<script 
+  type="text/JavaScript" 
+  language="JavaScript">
+<!-- 
+//
+// format date as dd-mmm-yy
+// example: 12-Jan-99
+//
+function date_ddmmmyy(date)
+{
+  var d = date.getDate();
+  var m = date.getMonth() + 1;
+  var y = date.getYear();
+  // handle different year values 
+  // returned by IE and NS in 
+  // the year 2000.
+  if(y >= 2000)
+  {
+    y -= 2000;
+  }
+  if(y >= 100)
+  {
+    y -= 100;
+  }
+  // could use splitString() here 
+  // but the following method is 
+  // more compatible
+  var mmm = 
+    ( 1==m)?'Jan':( 2==m)?'Feb':(3==m)?'Mar':
+    ( 4==m)?'Apr':( 5==m)?'May':(6==m)?'Jun':
+    ( 7==m)?'Jul':( 8==m)?'Aug':(9==m)?'Sep':
+    (10==m)?'Oct':(11==m)?'Nov':'Dec';
+  return "" +
+    (d<10?"0"+d:d) + "-" +
+    mmm + "-" +
+    (y<10?"0"+y:y);
+}
+//
+// get last modified date of the 
+// current document.
+//
+function date_lastmodified()
+{
+  var lmd = document.lastModified;
+  var s   = "Unknown";
+  var d1;
+  // check if we have a valid date
+  // before proceeding
+  if(0 != (d1=Date.parse(lmd)))
+  {
+    s = "" + date_ddmmmyy(new Date(d1));
+  }
+  return s;
+}
+//
+// finally display the last modified date
+// as DD-MMM-YY
+//
+document.write( 
+  "This page was updated on " + 
+  date_lastmodified() );
+// -->
+</script>
+    </body>
+</html>
