--- a/RideTest.html
+++ b/RideTest.html
@@ -52,7 +52,7 @@
 <tbody>
 <tr style="height: 21px;">
 <td style="width: 50%; height: 21px; text-align: left;"><strong>&nbsp; &nbsp;Backline Needed</strong></td>
-<td style="width: 50%; height: 21px; text-align: right;"><strong>Carried&nbsp; &nbsp;</strong></td>
+<td style="width: 50%; height: 21px; text-align: right;"><strong>&nbsp; &nbsp;</strong></td>
 </tr>
 <tr>
 <td style="width: 50%;">
