--- a/RideTest.html
+++ b/RideTest.html
@@ -54,28 +54,21 @@
 <td style="width: 50%; height: 21px; text-align: left;"><strong>&nbsp; &nbsp;Backline Needed</strong></td>
 <td style="width: 50%; height: 21px; text-align: right;"><strong>&nbsp; &nbsp;</strong></td>
 </tr>
-<tr>
-<td style="width: 50%;">
-<p style="text-align: center;">2 Wireless Microphone</p>
-<p style="text-align: center;"><sub>(Shure UHF-R at Minimum, not ULX, no PRG or PGX)</sub><br /><span style="text-decoration: underline;">Must to be&nbsp;approved&nbsp;by TM PRIOR to DOS.</span></p>
-</td>
-<td style="width: 50%; text-align: center;">
-<p>&nbsp;</p>
-<p>&nbsp;</p>
-<p>&nbsp;</p>
-</td>
+<tr style="height: 14px;">
+<td style="width: 50%; height: 21px; text-align: center;">2 Wireless Microphone&nbsp;</td>
+<td style="width: 50%; height: 21px; text-align: center;"><sup><sub>(Shure UHF-R at Minimum, not ULX, no PRG or PGX)</sub></sup>&nbsp;</td>
 </tr>
 <tr style="height: 14px;">
 <td style="width: 50%; height: 21px; text-align: center;">2 Wired Shure SM58 Microphones</td>
+<td style="width: 50%; height: 21px; text-align: center;">&nbsp;</td>
+</tr>
+<tr style="height: 21px;">
 <td style="width: 50%; height: 21px; text-align: center;">2 Stereo DIs</td>
-</tr>
-<tr style="height: 21px;">
 <td style="width: 50%; height: 21px; text-align: center;">2 Straight Mic Stands</td>
-<td style="width: 50%; height: 21px; text-align: center;">1 Mono DI</td>
 </tr>
 <tr style="height: 21px;">
-<td style="width: 50%; height: 21px; text-align: center;">2 Boom Vocal Mic Stands</td>
-<td style="width: 50%; height: 21px;">&nbsp;</td>
+<td style="width: 50%; height: 21px; text-align: center;">1 Mono DI</td>
+<td style="width: 50%; height: 21px; text-align: center;">&nbsp;2 Boom Vocal Mic Stands</td>
 </tr>
 <tr style="height: 21px;">
 <td style="width: 50%; height: 21px; text-align: center;">5 Monitor Wedges</td>
