--- a/RideTest.html
+++ b/RideTest.html
@@ -56,7 +56,7 @@
 </tr>
 <tr style="height: 14px;">
 <td style="width: 50%; height: 21px; text-align: center;">2 Wireless Microphone&nbsp;</td>
-<td style="width: 50%; height: 21px; text-align: center;"><sup><sub>(Shure UHF-R at Minimum, not ULX, no PRG or PGX)</sub></sup>&nbsp;</td>
+<td style="width: 50%; height: 21px; text-align: center;"><sup><sub>(Shure preferred)</sub></sup>&nbsp;</td>
 </tr>
 <tr style="height: 14px;">
 <td style="width: 50%; height: 21px; text-align: center;">2 Wired Shure SM58 Microphones</td>
