--- a/index.html
+++ b/index.html
@@ -1,1 +1,2 @@
-<p><a href="http://nobilling.info/"><img src="https://static1.squarespace.com/static/56c2aff47c65e4a06b4dc51a/t/5cabd3f4971a18059e837bd1/1554764956289/ezgif-3-d89aabe25230.gif?format=2500w" /></a></p>
+<p><a href="http://nobilling.info/"><img src="https://static1.squarespace.com/static/56c2aff47c65e4a06b4dc51a/t/5cabd3f4971a18059e837bd1/1554764956289/ezgif-3-d89aabe25230.gif?format=2500w" align="middle" /></a></p>
+
