--- a/index.html
+++ b/index.html
@@ -1,2 +1,22 @@
-<p><a href="http://nobilling.info/"><img src="https://static1.squarespace.com/static/56c2aff47c65e4a06b4dc51a/t/5cabd3f4971a18059e837bd1/1554764956289/ezgif-3-d89aabe25230.gif?format=2500w" align="middle" /></a></p>
-
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+    <title>NoBilling . Info</title>
+<style>
+.verticalhorizontal {
+    display: table-cell;
+    height: 300px;
+    text-align: center;
+    width: 300px;
+    vertical-align: middle;
+}
+</style>
+  </head>
+  <body>
+    <div class="verticalhorizontal">
+  <p><img src="https://static1.squarespace.com/static/56c2aff47c65e4a06b4dc51a/t/5cabd3f4971a18059e837bd1/1554764956289/ezgif-3-d89aabe25230.gif?format=2500w" alt="NoBillingInfo" width="800" height="450" /></p>
+    </div>
+  </body>
+</html>
