--- a/index.html
+++ b/index.html
@@ -5,12 +5,11 @@
   <meta name="viewport" content="width=device-width,initial-scale=1">
     <title>NoBilling . Info</title>
 <style>
-.verticalhorizontal {
-    display: table-cell;
-    height: 300px;
-    text-align: center;
-    width: 300px;
-    vertical-align: middle;
+img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 99%;
 }
 </style>
   </head>
