--- a/IRriderNBI2019.html
+++ b/IRriderNBI2019.html
@@ -41,7 +41,7 @@
 <div id="KeyInfo">
 <h2>Key Info</h2>
 <hr />
-<p>Injury Reserve (IR) consists of 2 Vocalist and a Producer.&nbsp;<br />Will require 2 Wireless Microphones (Does NOT carry)<br />One Wired Mic will run through some processing and be sent back to you (DSR)<br />One Wireless Mic&nbsp;will need to be routed&nbsp;through one of our interfaces (DSR). It will be processed and sent back.<br />The remaining two inputs are L+R Audio Track &amp; Talk Back to FOH<br />All Lines connect to house as XLR<br />6 Inputs Total<br />Injury Reserve's gear will run off of 110v Power.<br />Traveling Party is 6 total.<br />We are not traveling with an Audio Engineer. The PM will double as LD.</p>
+<p>Injury Reserve (IR) consists of 2 Vocalist and a Producer.&nbsp;<br />Will require 2 Wireless Microphones & 1 Wired Microphone (Does NOT carry)<br />One Wireless Mic will run through some processing and be sent back to you (DSR)<br />Other Inputs are L+R Audio Track &amp; L+R Sampler (Stereo DI)<br />All Lines connect to house as XLR<br />7 Inputs Total<br />Injury Reserve's gear will run off of 110v Power.<br />Traveling Party is 6 total.<br />We are not traveling with an Audio Engineer. The PM will double as LD.</p>
 </div>
 <div id="Gear">
 <h2>Gear + Backline</h2>
@@ -59,19 +59,19 @@
 <td style="width: 50%; height: 21px; text-align: center;"><sup><sub>(Shure preferred)</sub></sup>&nbsp;</td>
 </tr>
 <tr style="height: 14px;">
-<td style="width: 50%; height: 21px; text-align: center;">2 Wired Shure SM58 Microphones</td>
+<td style="width: 50%; height: 21px; text-align: center;">1 Wired Shure SM58 Microphones</td>
 <td style="width: 50%; height: 21px; text-align: center;">&nbsp;</td>
 </tr>
 <tr style="height: 21px;">
-<td style="width: 50%; height: 21px; text-align: center;">2 Stereo DIs</td>
-<td style="width: 50%; height: 21px; text-align: center;">2 Straight Mic Stands</td>
+<td style="width: 50%; height: 21px; text-align: center;">1 Stereo DIs</td>
+<td style="width: 50%; height: 21px; text-align: center;">1 Straight Mic Stand</td>
 </tr>
 <tr style="height: 21px;">
-<td style="width: 50%; height: 21px; text-align: center;">1 Mono DI</td>
+<td style="width: 50%; height: 21px; text-align: center;"> </td>
 <td style="width: 50%; height: 21px; text-align: center;">&nbsp;2 Boom Vocal Mic Stands</td>
 </tr>
 <tr style="height: 21px;">
-<td style="width: 50%; height: 21px; text-align: center;">5 Monitor Wedges</td>
+<td style="width: 50%; height: 21px; text-align: center;">4+ Monitor Wedges</td>
 <td style="width: 50%; height: 21px; text-align: center;"><strong>Does not carry Power Converters.</strong></td>
 </tr>
 </tbody>
@@ -92,7 +92,7 @@
 <td style="width: 50%; text-align: center;"><strong><span style="text-decoration: underline;">Monitor Mixes</span></strong></td>
 </tr>
 <tr>
-<td style="width: 50%; text-align: left; padding-left: 60px;"><br />1. Track L<br />2. Track R<br />3. Nate Vocal* <br />4. Groggs Vocal (Dry)<br />5. Effects Vocal 1* <br />6 Talkback to FOH
+<td style="width: 50%; text-align: left; padding-left: 60px;"><br />1. Track L<br />2. Track R<br />3. Nate Vocal* <br />4. Groggs Vocal (Dry)<br />5. Sampler L <br />6. Sampler R <br />7. Spare Wired
 <p style="font-size: 75%;">* =Processed Onstage</p>
 </td>
 <td style="width: 50%; text-align: left;">
