--- a/IRriderNBI2019.html
+++ b/IRriderNBI2019.html
@@ -63,7 +63,7 @@
 <td style="width: 50%; height: 21px; text-align: center;">&nbsp;</td>
 </tr>
 <tr style="height: 21px;">
-<td style="width: 50%; height: 21px; text-align: center;">1 Stereo DIs</td>
+<td style="width: 50%; height: 21px; text-align: center;">1 Stereo DI</td>
 <td style="width: 50%; height: 21px; text-align: center;">1 Straight Mic Stand</td>
 </tr>
 <tr style="height: 21px;">
@@ -106,7 +106,7 @@
 </div>
 <div id="StagePlots">
 <h2>Stage Plot</h2>
-<hr /><img class="center" src="https://i.imgur.com/FuTKWeM.jpg" width="95%" /><br /> <a href="https://drive.google.com/file/d/1IpxosYsbInWlJicEJUC5yrEuA0pHldv_/view?usp=sharing"><span style="text-decoration: underline;">Download as .PDF</span></a><br /> <a href="https://drive.google.com/file/d/10XpYXh0zuQSHFewrvEZ0IIcuo6SJj2Di/view?usp=sharing"><span style="text-decoration: underline;">Download as .JPG</span></a>
+<hr /><img class="center" src="https://i.imgur.com/XnaEBC0.jpg" width="95%" /><br /> <a href="https://drive.google.com/file/d/1n7HkECT27GRGe3e84Au4NhqtUohiA462/view?usp=sharing"><span style="text-decoration: underline;">Download as .PDF</span></a><br /> <a href="https://drive.google.com/file/d/1pYOrRlnpDV71AmMSN3aQ0NTNr_j1aqTu/view?usp=sharing"><span style="text-decoration: underline;">Download as .JPG</span></a>
 <p>&nbsp;</p>
 </div>
 <h2>&nbsp;</h2>
