--- a/IRriderNBI2019.html
+++ b/IRriderNBI2019.html
@@ -177,7 +177,7 @@
 <tr style="height: 21px;">
 <td style="width: 25%; height: 21px; text-align: center;">Parker Corey</td>
 <td style="width: 25%; height: 21px; text-align: center;">Talent</td>
-<td style="width: 25%; height: 21px; text-align: center;">Vegan</td>
+<td style="width: 25%; height: 21px; text-align: center;">Vegetarian</td>
 </tr>
 <tr style="height: 21px;">
 <td style="width: 25%; height: 21px; text-align: center;">Jordan Groggs</td>
@@ -187,7 +187,7 @@
 <tr style="height: 21px;">
 <td style="width: 25%; height: 21px; text-align: center;">Nathaniel Ritchie</td>
 <td style="width: 25%; height: 21px; text-align: center;">Talent</td>
-<td style="width: 25%; height: 21px; text-align: center;">Vegan</td>
+<td style="width: 25%; height: 21px; text-align: center;">Vegetarian</td>
 </tr>
 <tr style="height: 21px;">
 <td style="width: 25%; height: 21px; text-align: center;">Floyd Anderson</td>
