--- a/IRriderNBI2019.html
+++ b/IRriderNBI2019.html
@@ -96,13 +96,12 @@
 <p style="font-size: 75%;">* =Processed Onstage</p>
 </td>
 <td style="width: 50%; text-align: left;">
-<p style="padding-left: 60px;">1. Producer Wedge<br />2. DSR-DSC Wedges 1-3<br />3. DSL Wedge</p>
+<p style="padding-left: 60px;">1. Producer Wedge<br />2. Down Stage Left<br />3. Down Stage Right</p>
 </td>
 </tr>
 </tbody>
 </table>
 <p>&nbsp;</p>
-<p>Inputs 1-4 will got into all Monitor Mixes.<br />Input 5 "Effects Vocal 1" will ONLY be in Mix 3<br />This is to prevent feedback due to heavy processing.<br />Monitor Mix 3 will match Mix 2, only with Effects Vocal 1 added.&nbsp;</p>
 </div>
 <div id="StagePlots">
 <h2>Stage Plot</h2>
