--- a/IRriderNBI2019.html
+++ b/IRriderNBI2019.html
@@ -92,8 +92,8 @@
 <td style="width: 50%; text-align: center;"><strong><span style="text-decoration: underline;">Monitor Mixes</span></strong></td>
 </tr>
 <tr>
-<td style="width: 50%; text-align: left; padding-left: 60px;"><br />1. Track L<br />2. Track R<br />3. Nate Vocal* <br />4. Groggs Vocal (Dry)<br />5. Sampler L <br />6. Sampler R <br />7. Spare Wired
-<p style="font-size: 75%;">* =Processed Onstage</p>
+<td style="width: 50%; text-align: left; padding-left: 60px;"><br />1. Track L<br />2. Track R<br />3. Nate Vocal* <br />4. Groggs Vocal**<br />5. Sampler L <br />6. Sampler R <br />7. Spare Wired
+<p style="font-size: 75%;">* = Processed Onstage<br />** = Dry</p>
 </td>
 <td style="width: 50%; text-align: left;">
 <p style="padding-left: 60px;">1. Producer Wedge<br />2. Down Stage Left<br />3. Down Stage Right</p>
